--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 SECRET_KEY="secret key"
+MONGO_URI="mongodb+srv://gaurav:gaurav123@cluster0.ffhnw.mongodb.net/investify?retryWrites=true&w=majority"
