--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "socket.io": "^4.5.1"
   }
 }
